# gst-crypto

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
src/: Makefile.am  gstcrypto.c  gstcrypto.h
